@@ -1,6 +1,10 @@
 Changes
 =======
 
+Next
+------------------
+- Add support for dataset and band tags (#32).
+
 0.5.1 (2014-02-02)
 ------------------
 - Add mask option to shapes() function (#26).
